# doxen

./: .gitignore  CLAUDE.md  Gemfile  README.md  TODO.md  pyproject.toml  test_q2_external_docs_system.py  validate_cross_project_weigher.py
.claude/: settings.json
.claude/claude_md_reference/: development-workflow.md
.claude/claude_md_reference.example/: documentation-structure.md  environment-setup.md  testing-validation.md
.doxen/: config.yaml
docs/: DEVELOPMENT.md  PIPELINE.md  PROGRESS.md  REQUIREMENTS.md  STRATEGIC-DECISION.md  STRATEGY-PIVOT.md  STRATEGY.md  VISION.md
docs/.progress/: CACHING-IMPLEMENTATION-COMPLETE.md  EXPERIMENTAL-FRAMEWORK.md  FRAMEWORK-AWARE-CONFIG-COMPLETE.md  FRAMEWORK-AWARE-CONFIG-TODO.md  PHASE1-CONFIG-ENHANCEMENT.md  PHASE1-LLM-USAGE-REVIEW.md  PILOT-PHASE-PLAN.md  REGRESSION-TEST-RAG-DEMO.md  RUBY-AST-PARSER-INVESTIGATION.md  SESSION-2026-03-25.md  cross-project-weighting-implementation.md  cross-project-weighting-insight.md  day-4-dual-generation-summary.md  day-4-final-status.md  day-5-discourse-completion.md  documentation-generation-status.md  q2-external-docs-implementation.md  q2-external-docs-reality-check.md  readme-vs-index-design-decision.md  sprint-2-3-tier-2-plan.md  strategy-pivot-investigation.md  tier-3-integration-guides-plan.md  tier-4-interactive-exploration-plan.md  topic-coverage-strategy.md  unified-enhancement-pipeline-implementation.md
experimental/: ANTI_PATTERN_CLEANUP.md  DEPTH_VALIDATION.md  EXPANSION_COMPLETE.md  EXPANSION_PLAN.md  GOLD_STANDARD_15.md  IMPROVEMENTS.md  README.md  SESSION_HANDOFF.md  application_projects.md  new_doc_projects.md
experimental/analysis/: baseline_metrics.json  django-rest-framework_component_grouping.json  django-rest-framework_existing_docs_analysis.json  django-rest-framework_q2_integration_test.json  django-rest-framework_q3_explosion_test.json  (+1 more)
scripts/: doxen
tests/: test_architecture_extractor.py  test_architecture_generator.py  test_audit_template_discovery.py  test_audit_template_docs.py  test_cross_project_weigher.py  test_discovery.py  test_discovery_pipeline.py  test_doc_generator.py  test_docs.py  test_example.py  test_framework_detection.py  test_report_structure.py  test_repository_analyzer.py  test_workflow_mapper.py
(+200 files in other folders)
