[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doxen"
version = "0.1.0"
description = "Knowledge layer for code - transforms codebases into structured, testable, and AI-ready documentation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Kefei Mo", email = "kefeimo@example.com"}
]
keywords = ["documentation", "code-analysis", "knowledge-extraction", "rag", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=8.1.0",           # CLI framework
    "anthropic>=0.18.0",      # LLM integration (direct API)
    "boto3>=1.34.0",          # AWS SDK for Bedrock
    "gitpython>=3.1.0",       # Git history analysis
    "pyyaml>=6.0",            # YAML metadata handling
    "markdown-it-py>=3.0.0",  # Markdown parsing/generation
    "rich>=13.0.0",           # Terminal output formatting
    "jinja2>=3.1.0",          # Template engine for documentation
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.scripts]
doxen = "doxen.cli:main"

[project.urls]
Homepage = "https://github.com/kefeimo/doxen"
Repository = "https://github.com/kefeimo/doxen"
Issues = "https://github.com/kefeimo/doxen/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
